fixing layout issues on adding and edditing scorecard

--- a/src/app/create/create.component.css
+++ b/src/app/create/create.component.css
@@ -23,13 +23,28 @@
   height: 450px;
   position: relative;
   padding-top: 10px;
-  overflow: auto;
+  overflow-y: auto;
   margin-bottom: 5px;
   /*padding-left: 20px;*/
   cursor: pointer;
   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
   transition: all 0.3s ease-in-out;
 }
+
+.scorecard_details::-webkit-scrollbar {
+  width: 6px;
+}
+
+.scorecard_details::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+}
+
+.scorecard_details::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
 
 .scorecard_details::after{
   width: auto;
